# agent-tool-drone-cli

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: COMMANDS.md
scripts/: build_binary.py  gen_docs.py
spike/: VERIFIED_FINDINGS.md  docker-compose.spike.yml
src/dronecli/: __init__.py  __main__.py  appctx.py  builds.py  cli.py  client.py  config.py  cronspec.py  errors.py  spec.py
src/dronecli/commands/: __init__.py  _shared.py  auth.py  build.py  context.py  cron.py  deploy.py  guide.py  install.py  log.py  orgsecret.py  raw.py  repo.py  secret.py  server.py  settings.py  template.py  user.py
tests/: test_builds_unit.py  test_config_unit.py  test_context_unit.py  test_cronspec_unit.py  test_globals_unit.py  test_guide_unit.py  test_packaging_unit.py  test_repo_unit.py  test_report_unit.py  test_secret_unit.py  test_server_unit.py  test_template_unit.py
